Completed refactoring of Maven build to improve build speed.